add permission data
